# TDEaseNext

./: .codexignore  .coverage  .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  Snakefile  ai-skill-design.json  ai-skill-specs.json  ai-skill-tasks.json  config.yaml  fix_node_type.sh  main.py  playwright-frontend.config.ts  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.git.backup.1772454142/: COMMIT_EDITMSG  HEAD  config  index
.tdease_resume/: consumer_1.json  data_source_1.json
InformedProteomics_Program/: ProMex.exe.config  ProMexAlign.exe.config  README.md
TDEase-FrontEnd/: .env.development  .env.production  README.md  package.json  pnpm-lock.yaml  vite.config.ts
app/: __init__.py  dependencies.py  main.py
config/: tool-schema.json
docs/: 01_requirements_and_features.md  02_workflow_execution_architecture.md  03_frontend_visualization_architecture.md  04_overall_interaction_architecture.md  05_api_documentation.md  06_end_to_end_testing.md  07_todo.md  08_priority_test_workflow.md  API_USAGE_NEW_ARCHITECTURE.md  ARCHITECTURE.md  About_node_connection.md  CodeFlow.md  FRONTEND_BACKEND_OPTIMIZATION.md  FUNCTIONAL_OVERVIEW.md  INTERACTIVE_NODES.md  INTERACTIVE_VIS_FINAL_REPORT.md  INTERACTIVE_VIS_IMPLEMENTATION_REPORT.md  NODE_TYPE_DIAGNOSIS.md  NODE_TYPE_FIX.md  README.md  ROADMAP.md  SNAKEMAKE_ENGINE_ANALYSIS.md  STATE_BUS_PROTOCOL.md  TESTING.md  TEST_IMPLEMENTATION_GUIDE.md  TODO.md  TOOL_DEFINITION_SCHEMA.md  TOPMSV.md  TOPMSV_Architecture.md  VISUALIZATION_FIX_REPORT.md  WORKFLOW_EXECUTION.md  WORKFLOW_REQUIREMENTS.md  WORKSPACE_ARCHITECTURE.md  关于工作流解析的细节.md  关于工作目录文件管理.md
scripts/: fix_user_id_migration.py  migrate_database.py  migrate_samples_to_db.py  msconvert_docker.py  run_workflow_test.ps1  run_workflow_test.sh  seed_workflow.py  verify_cancellation.py
src/: README.md  __init__.py
tests/: README.md  mock_test_backend.py  test.json  test_cmdline_composition_e2e.py  test_command_pipeline_trace.py  test_execution_api_command_trace.py  test_execution_api_persistent_fallback.py  test_execution_error_redaction.py  test_execution_store_command_trace.py  test_input_binding_fail_fast_integration.py  test_input_binding_planner.py  test_input_path_resolution.py  test_interactive_execution.py  (+9 more)
(+514 files in other folders)
