[project]
name = "tdease-backend"
version = "0.1.0"
description = "TDEase Backend - Mass Spectrometry Workflow Execution Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "aiofiles>=25.1.0",
    "websockets>=16.0",
    "pandas>=3.0.1",
    "numpy>=2.4.2",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
    "toml>=0.10.2",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    # YAML support
    "pyyaml>=6.0.3",
    "psutil>=7.2.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
